<resources>
    <string name="app_name">Caretaker</string>
    <string name="person_icon">ProfileIcon</string>
    <string name="phone_icon">PhoneIcon</string>
    <string name="home_icon">HomeIcon</string>
    <string name="schedule">Schedule</string>
    <string name="delete_task">Delete Task</string>
    <string name="not_authenticated_yet">Not Authenticated yet.</string>
    <string name="interested_topics">Interested topics</string>
    <string name="patient_dp">patient_dp</string>
    <string name="patient_list">Patient List</string>
    <string name="change_patient">Change Patient</string>
    <string name="add_patient">Add Patient</string>
    <string name="try_again">Try Again</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="click_to_view_edit_profile">CLICK TO VIEW/EDIT PROFILE</string>
    <string name="edit">Edit</string>
    <string name="track_location">Track Location</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="general">GENERAL</string>
    <string name="customize">CUSTOMIZE</string>
    <string name="emrgency_contacts">emergency contacts</string>
    <string name="news_feed_interests">News Feed Interests</string>
    <string name="music_preferences">Music Preferences</string>
    <string name="view_edit">VIEW/EDIT PROFILE</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="Intro"> Thank you for downloading the app</string>
    <string name="Intro2">Before using the app please conduct the following test on your patient</string>
    <string name="tutorial">Mark checkboxes if patient has answered correctly, otherwise leave it blank.</string>
    <string name="q1">Ask the patient the following</string>
    <string name="day">What Day is it?</string>
    <string name="month"> What Month is it? </string>
    <string name="year">What Year is it?</string>
    <string name="date">What is today\'s Date?</string>
    <string name="season">What Season is it?</string>
    <string name="country">Which country are we in? </string>
    <string name="state">Which state are we in? </string>
    <string name="city">Which city are we in? </string>
    <string name="place">Where are we?(e.g. home,clinic) </string>
    <string name="floor">Which floor are we on?(e.g.1st) </string>
    <string name="q3">Speak aloud three unrelated objects and ask the patient to name them all(repeat only 3 times if necessary)</string>
    <string name="q4">Ask to spell the word \'PEARL\' backwards</string>
    <string name='q5'>Ask to repeat previously said objects</string>
    <string name="q6">Show patient two objects and ask them what it is</string>
    <string name="q7">Ask the patient to say- \'No ifs ands or buts\'</string>
    <string name="q8">Give the patient a piece of paper and ask them to</string>
    <string name="q9">Ask the patient to read the instructions and perform the task</string>
    <string name="q10">Ask the patient to write a sentence in a piece of paper</string>
    <string name="q11">Ask the patient to draw the following figure</string>

    <string-array name="spinnernames">
        <item>No repeat</item>
        <item>Every minute</item>
        <item>Every two minutes</item>
        <item>Every Day</item>
    </string-array>
    <string name="title_activity_emergency_contacts">EmergencyContacts</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="set_interest">Set Interest</string>
    <string name="enter_an_interest">Enter an interest</string>
    <string name="edit_patient_profile">Edit Patient Profile</string>
    <string name="select_a_patient">SELECT A PATIENT</string>


</resources>
