<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PatientMenu">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/patient_list"
        app:titleTextColor="@color/White"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp"-->
        <!--android:layout_margin="16dp"-->
        <!--android:background="@color/startblue"-->
        <!--android:gravity="bottom"-->
        <!--android:padding="10dp"-->
        <!--android:text="@string/patient_list"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
        <!--android:textColor="@color/White"-->
        <!--android:textSize="30sp" />-->
    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/select_a_patient"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/patient_1"
        android:layout_below="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/customize_layout_border"
        android:clickable="true"
        android:elevation="4dp"
        android:onClick="SelectProfile"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:focusable="true">

        <ImageView
            android:contentDescription="@string/patient_dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/icon_person_blue" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="8sp"
                android:text="Patient Name"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </RelativeLayout>
        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="xyz"-->
        <!--android:textSize="14sp" />-->

    </LinearLayout>
    <Button
        android:onClick="addPatient"
        android:id="@+id/add_patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_patient"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="80dp"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:background="@drawable/customize_layout_border"-->
    <!--android:elevation="10dp"-->
    <!--android:orientation="horizontal">-->

    <!--<ImageView-->
    <!--android:layout_width="60dp"-->
    <!--android:layout_height="60dp"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:src="@drawable/icon_person_green" />-->


    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:orientation="vertical">-->

    <!--<TextView-->
    <!--android:id="@+id/p2"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="ABC"-->
    <!--android:textColor="#4a4a4a"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold" />-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="xyz"-->
    <!--android:textSize="14sp" />-->
    <!--</LinearLayout>-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="80dp"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:background="@drawable/customize_layout_border"-->
    <!--android:elevation="10dp"-->
    <!--android:orientation="horizontal">-->

    <!--<ImageView-->
    <!--android:layout_width="60dp"-->
    <!--android:layout_height="60dp"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:src="@drawable/icon_person_purple" />-->

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:orientation="vertical">-->

    <!--<TextView-->
    <!--android:id="@+id/p3"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="ABC"-->
    <!--android:textColor="#4a4a4a"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold" />-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="xyz"-->
    <!--android:textSize="14sp" />-->
    <!--</LinearLayout>-->

    <!--</LinearLayout>-->
</RelativeLayout>





